--- a/css/style.css
+++ b/css/style.css
@@ -598,6 +598,9 @@ h6 {
   z-index: -1;
   margin: -3px;
   border-radius: inherit;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
   background: -o-linear-gradient(176.53deg, #E52D27 0%, #B31217 100%);
   background: linear-gradient(273.47deg, #E52D27 0%, #B31217 100%);
 }
@@ -1076,16 +1079,65 @@ h6 {
 }
 
 .directions__item {
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  max-height: 250px;
   position: relative;
   border-radius: 20px;
   color: #fff;
+  overflow: hidden;
+}
+
+.directions__item::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.directions__item:nth-child(1):before {
+  background: rgba(67, 122, 47, 0.4);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  border-radius: 20px;
+}
+
+.directions__item:nth-child(2):before {
+  background: rgba(157, 94, 104, 0.45);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  border-radius: 20px;
+}
+
+.directions__item:nth-child(3):before {
+  background: rgba(71, 112, 147, 0.4);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  border-radius: 20px;
+}
+
+.directions__item:hover img {
+  -webkit-transform: scale(1.2);
+      -ms-transform: scale(1.2);
+          transform: scale(1.2);
 }
 
 .directions__inner img {
   max-width: 100%;
   min-width: 100%;
+  max-height: 250px;
   -o-object-fit: cover;
      object-fit: cover;
+  border-radius: 20px;
+  -webkit-transition: -webkit-transform 0.3s ease 0s;
+  transition: -webkit-transform 0.3s ease 0s;
+  -o-transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s;
+  transition: transform 0.3s ease 0s, -webkit-transform 0.3s ease 0s;
 }
 
 .directions__text {
@@ -1110,6 +1162,7 @@ h6 {
   height: 100%;
   max-width: 100%;
   padding: 10px;
+  z-index: 2;
 }
 
 .directions__title {
@@ -2761,12 +2814,6 @@ button.swiper-pagination-bullet {
   .directions__items {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-  }
-
-  .directions__item {
-    -webkit-box-flex: 1;
-        -ms-flex-positive: 1;
-            flex-grow: 1;
   }
 }
 
